Fixing invisible content on modal / inputs due to black background. Style changes.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,15 +7,25 @@
 	height: 300px;
 }
 
-.non-editable {
-	border: none;
-	background-color: transparent;
-}
 
 body {
     background-image: url('/images/pokerbg1.jpg');
     color: white;
     font-family: 'Inconsolata', monospace;
+}
+
+th {
+	text-align: center;
+}
+
+.modal, input {
+	color: black;
+}
+
+.non-editable {
+	border: none;
+	background-color: transparent;
+	color: white;
 }
 
 
